# docs/swagger_output.json
@@ -74,10 +74,46 @@
     },
     "/v1/auth/me": {
       "get": {
+        "tags": [
+          "Auth"
+        ],
         "description": "",
         "responses": {
           "default": {
             "description": ""
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/v1/users": {
+      "post": {
+        "tags": [
+          "User"
+        ],
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateUserRequest"
+              }
+            },
+            "application/xml": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateUserRequest"
+              }
+            }
           }
         }
       }
@@ -114,10 +150,6 @@
             "type": "string",
             "example": "yourname"
           },
-          "username": {
-            "type": "string",
-            "example": "yourusername"
-          },
           "email": {
             "type": "string",
             "example": "youremail@mail.com"
@@ -133,6 +165,26 @@
         },
         "xml": {
           "name": "RegisterRequest"
+        }
+      },
+      "createUserRequest": {
+        "type": "object",
+        "properties": {
+          "fullName": {
+            "type": "string",
+            "example": "yourname"
+          },
+          "email": {
+            "type": "string",
+            "example": "youremail@mail.com"
+          },
+          "role": {
+            "type": "string",
+            "example": "roleuser"
+          }
+        },
+        "xml": {
+          "name": "createUserRequest"
         }
       }
     }
